<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textSize="25sp"
        android:text="@string/registration_broker"
        android:textAlignment="gravity" />


    <TextView
        android:id="@+id/text_Name"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/edit_Name2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="" />


    <TextView
        android:id="@+id/text_Telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:text="@string/telephone" />

    <EditText
        android:id="@+id/edit_Telephone2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="" />

    <TextView
        android:id="@+id/text_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:text="@string/customer_mail" />

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="" />

    <Button
        android:id="@+id/button_Send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/send" />

</LinearLayout>